<resources>
    <string name="app_name">JeezyFashion</string>
    <string name="login">Login</string>
    <string name="attribution"><![CDATA[<a href=\'https://www.freepik.com/vectors/woman\'>Woman vector created by freepik - www.freepik.com</a>]]></string>
    <string name="logout">Logout</string>
    <string name="nav_header_background">Nav Header Background</string>
    <string name="jeezy_fashion">Jeezy Fashion</string>
    <string name="placeholder">Placeholder</string>
    <string name="error">Error</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_favorites">Favorites</string>
    <string name="delete_icon">Delete icon</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="submit">Submit</string>
    <string name="enter_code">Enter Code</string>
    <string name="resend_code">Resend Code</string>
</resources>