<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_dress"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:contentDescription="@string/placeholder"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_dress_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/placeholder1" />

        <TextView
            android:id="@+id/tv_dress_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_dress_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_dress"
            tools:text="Short party dress" />

        <TextView
            android:id="@+id/tv_dress_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dress_name"
            tools:text="UGX 30,000 " />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/delete_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete"
            app:tint="@color/icon_tint" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_margin="7dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/favorite_icon"
            app:layout_constraintEnd_toStartOf="@+id/iv_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_bordered"
            app:tint="@color/icon_tint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
